# grug-factory

./: CMakeLists.txt  README.md  grug.h  main.c  tests.py
.github/workflows/: build.yml
tests/belt-donut/: expected.grugtorio.json  save.grugtorio.json  settings.json
tests/belt-merry-go-round-huge/: expected.grugtorio.json  save.grugtorio.json
tests/belt-merry-go-round-inner/: expected.grugtorio.json  save.grugtorio.json  settings.json
tests/belt-merry-go-round-outer/: expected.grugtorio.json  save.grugtorio.json
tests/belt-sideloading/: expected.grugtorio.json  save.grugtorio.json  settings.json
tests/belt-up-right/: expected.grugtorio.json
tests/belt-zigzag/: TODO.md  expected.grugtorio.json
tests/belts-pointing-into-each-other/: expected.grugtorio.json  save.grugtorio.json
tests/electric-mining-drill-cant-output-into-other-mining-drill/: expected.grugtorio.json
tests/electric-mining-drill-into-outer-lane/: expected.grugtorio.json
tests/electric-mining-drill-outputs/: expected.grugtorio.json
